2005-11-13  David Hampton  <hampton@employees.org>

	* various src/gnome-utils and src/gnome files: Add documentation.

	* src/gnome-utils/gnc-menu-extensions.[ch]: Remove unused
	functions.

	* src/gnome-utils/gnc-plugin.[ch]:
	* src/gnome/gnc-plugin-budget.c:
	* src/gnome/gnc-plugin-register.c:
	* src/gnome/gnc-plugin-account-tree.c: Remove vestigial code from
	the very early days of the gtk2 port.

	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/business/business-gnome/gnc-plugin-page-invoice.c:
	* src/gnome-utils/gnc-plugin.c:
	* src/gnome-utils/gnc-plugin.h:
	* src/gnome/gnc-plugin-page-register.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/gnc-plugin-page-budget.c: Clarify what "short" labels
	are used for by adding comments and changing array names.

2005-11-13  Derek Atkins  <derek@ihtfp.com>

	* src/core-utils/gnc-gkeyfile-utils.c: cast the
	  printf so we don't warn when sizeof(ssize_t) !=
	  sizeof(int).  In this case the cast is safe because
	  we can only write an int-size of data.

2005-11-13  Neil Williams <linux@codehelp.co.uk>

	* src/backend/file/sixtp.c : Remove deprecated
	SAX function. Closes bug #319559.

2005-11-13  Neil Williams <linux@codehelp.co.uk>

	* make-gncuash-potfiles.in : Add a specific
	call to read one libqof file.
	* po/POTFILES.in : the updated POTFILES list.

2005-11-13  Neil Williams <linux@codehelp.co.uk>

	* configure.in : New locations of QOF files and
	postgres fix to clean up CFLAGS
	* lib/Makefile.am : New directory.
	* src/engine/Makefile.am : Remove QOF build
	* src/backend/Makefile.am : Remove QSF directory.
	* src/backend/postgres/test/Makefile.am : Build tests
	without linking against the GModule to retain portability.
	* src/import-export/qif-import/test/Makefile.am : Adjusted
	linkage due to library changes.
	* src/gnome-utils/test/Makefile.am : Adjusted linkage
	due to library changes.

	Moving QSF to lib/libqof/backend/file
	* src/backend/qsf/qsf-backend.c