@@ -21,13 +21,7 @@ src/app-utils/gnc-helpers.c
 src/app-utils/gncmod-app-utils.c
 src/app-utils/gnc-ui-util.c
 src/app-utils/guile-util.c
-src/app-utils/gw-app-utils.c
 src/app-utils/option-util.c
-src/app-utils/test/test-exp-parser.c
-src/app-utils/test/test-link-module.c
-src/app-utils/test/test-print-parse-amount.c
-src/app-utils/test/test-print-queries.c
-src/app-utils/test/test-scm-query-string.c
 src/backend/dwi/qofmap.c
 src/backend/file/gnc-account-xml-v2.c
 src/backend/file/gnc-backend-file.c
@@ -53,47 +47,19 @@ src/backend/file/sixtp-dom-parsers.c
 src/backend/file/sixtp-stack.c
 src/backend/file/sixtp-to-dom-parser.c
 src/backend/file/sixtp-utils.c
-src/backend/file/test/grab-types.pl
-src/backend/file/test/test-date-converting.c
-src/backend/file/test/test-dom-converters1.c
-src/backend/file/test/test-dom-parser1.c
-src/backend/file/test/test-file-stuff.c
-src/backend/file/test/test-kvp-frames.c
-src/backend/file/test/test-load-backend.c
-src/backend/file/test/test-load-example-account.c
-src/backend/file/test/test-load-xml2.c
-src/backend/file/test/test-save-in-lang.c
-src/backend/file/test/test-string-converters.c
-src/backend/file/test/test-xml2-is-file.c
-src/backend/file/test/test-xml-account.c
-src/backend/file/test/test-xml-commodity.c
-src/backend/file/test/test-xml-pricedb.c
-src/backend/file/test/test-xml-transaction.c
 src/backend/net/NetIO.c
 src/backend/postgres/account.c
-src/backend/postgres/base-autogen.c
 src/backend/postgres/book.c
 src/backend/postgres/builder.c
-src/backend/postgres/check-autogen.c
 src/backend/postgres/checkpoint.c
 src/backend/postgres/demo.c
 src/backend/postgres/escape.c
 src/backend/postgres/events.c
-src/backend/postgres/functions.c
 src/backend/postgres/gncquery.c
-src/backend/postgres/kvp-autogen.c
 src/backend/postgres/kvp-sql.c
 src/backend/postgres/PostgresBackend.c
 src/backend/postgres/price.c
 src/backend/postgres/putil.c
-src/backend/postgres/table-audit.c
-src/backend/postgres/table-create.c
-src/backend/postgres/table-drop.c
-src/backend/postgres/table-version.c
-src/backend/postgres/test/test-db.c
-src/backend/postgres/test/test-escape.c
-src/backend/postgres/test/test-load-backend.c
-src/backend/postgres/test/test-period.c
 src/backend/postgres/txn.c
 src/backend/postgres/txnmass.c
 src/backend/postgres/upgrade.c
@@ -103,7 +69,6 @@ src/backend/rpc/gncRpc_clnt.c
 src/backend/rpc/gncRpc_server.c
 src/backend/rpc/gncRpc_server_stubs.c
 src/backend/rpc/gncRpc_svc.c
-src/backend/rpc/gncRpc_xdr.c
 src/backend/rpc/RpcBackend.c
 src/backend/rpc/RpcServer.c
 src/backend/rpc/RpcSock.c
@@ -137,14 +102,6 @@ src/business/business-core/gncOrder.c
 src/business/business-core/gncOwner.c
 src/business/business-core/gncTaxTable.c
 src/business/business-core/gncVendor.c
-src/business/business-core/gw-business-core.c
-src/business/business-core/test/test-address.c
-src/business/business-core/test/test-business.c
-src/business/business-core/test/test-customer.c
-src/business/business-core/test/test-employee.c
-src/business/business-core/test/test-job.c
-src/business/business-core/test/test-load-module.c
-src/business/business-core/test/test-vendor.c
 src/business/business-gnome/business-gnome-utils.c
 src/business/business-gnome/businessmod-gnome.c
 src/business/business-gnome/business-options-gnome.c
@@ -170,7 +127,6 @@ src/business/business-gnome/glade/payment.glade
 src/business/business-gnome/glade/vendor.glade
 src/business/business-gnome/gnc-plugin-business.c
 src/business/business-gnome/gnc-plugin-page-invoice.c
-src/business/business-gnome/gw-business-gnome.c
 src/business/business-gnome/search-owner.c
 src/business/business-ledger/gncEntryLedger.c
 src/business/business-ledger/gncEntryLedgerControl.c
@@ -182,7 +138,6 @@ src/business/business-utils/business-options.c
 src/business/business-utils/gncmod-business-utils.c
 src/business/dialog-tax-table/dialog-tax-table.c
 src/business/dialog-tax-table/gncmod-dialog-tax-table.c
-src/business/dialog-tax-table/gw-dialog-tax-table.c
 src/business/dialog-tax-table/tax-tables.glade
 src/calculation/amort_opt.c
 src/calculation/amort_prt.c
@@ -192,12 +147,10 @@ src/calculation/fin-interactive.c
 src/calculation/fin-main.c
 src/calculation/gncmod-calculation.c
 src/calculation/numeric_ops.c
-src/calculation/test/test-link.c
 src/core-utils/gnc-gconf-utils.c
 src/core-utils/gnc-gdate-utils.c
 src/core-utils/gnc-gkeyfile-utils.c
 src/core-utils/gnc-gobject-utils.c
-src/core-utils/gw-core-utils.c
 src/doc/doxygen_main_page.c
 src/engine/Account.c
 src/engine/cap-gains.c
@@ -216,8 +169,6 @@ src/engine/gncmod-engine.c
 src/engine/gnc-pricedb.c
 src/engine/gnc-session-scm.c
 src/engine/Group.c
-src/engine/gw-engine.c
-src/engine/gw-kvp.c
 src/engine/iso-4217-currencies.c
 src/engine/kvp-scm.c
 src/engine/messages.c
@@ -231,58 +182,9 @@ src/engine/Scrub3.c
 src/engine/Scrub.c
 src/engine/SX-book.c
 src/engine/SX-ttinfo.c
-src/engine/test-core/gncmod-test-engine.c
-src/engine/test-core/test-engine-stuff.c
-src/engine/test/test-book-merge.c
-src/engine/test/test-commodities.c
-src/engine/test/test-date.c
-src/engine/test/test-freq-spec.c
-src/engine/test/test-group-vs-book.c
-src/engine/test/test-guid.c
-src/engine/test/test-link.c
-src/engine/test/test-load-engine.c
-src/engine/test/test-lots.c
-src/engine/test/test-numeric.c
-src/engine/test/test-object.c
-src/engine/test/test-period.c
-src/engine/test/test-query.c
-src/engine/test/test-querynew.c
-src/engine/test/test-recurrence.c
-src/engine/test/test-resolve-file-path.c
-src/engine/test/test-scm-query.c
-src/engine/test/test-split-vs-account.c
-src/engine/test/test-transaction-reversal.c
-src/engine/test/test-transaction-voiding.c
 src/engine/Transaction.c
 src/engine/TransLog.c
-src/engine/xlate.pl
-src/experimental/cbb/cbb-engine/CBBlib-auto.pl
-src/experimental/cbb/cbb-engine/CBBlib.pl
-src/experimental/cbb/cbb-engine/common.pl
-src/experimental/cgi-bin/fastcgi-hello.c
-src/experimental/cgi-bin/gnc-server.c
-src/experimental/cgi-bin/hello2.c
-src/experimental/cgi-bin/hello3.c
-src/experimental/cgi-bin/hello.c
 src/gnc-module/gnc-module.c
-src/gnc-module/gw-gnc-module.c
-src/gnc-module/test/misc-mods/agedver.c
-src/gnc-module/test/misc-mods/futuremodsys.c
-src/gnc-module/test/misc-mods/incompatdep.c
-src/gnc-module/test/mod-bar/bar.c
-src/gnc-module/test/mod-bar/bar-gwrap.c
-src/gnc-module/test/mod-bar/gnc-mod-bar.c
-src/gnc-module/test/mod-baz/baz.c
-src/gnc-module/test/mod-baz/baz-gwrap.c
-src/gnc-module/test/mod-baz/gnc-mod-baz.c
-src/gnc-module/test/mod-foo/foo.c
-src/gnc-module/test/mod-foo/foo-gwrap.c
-src/gnc-module/test/mod-foo/gnc-mod-foo.c
-src/gnc-module/test/test-agedver.c
-src/gnc-module/test/test-dynload.c
-src/gnc-module/test/test-incompatdep.c
-src/gnc-module/test/test-load-c.c
-src/gnc-module/test/test-modsysver.c
 src/gnome/dialog-chart-export.c
 src/gnome/dialog-commodities.c
 src/gnome/dialog-fincalc.c
@@ -333,7 +235,6 @@ src/gnome/gnc-plugin-register.c
 src/gnome/gnc-split-reg.c
 src/gnome/gnucash.desktop.in
 src/gnome/gnucash.keys.in
-src/gnome/gw-gnc.c
 src/gnome/lot-viewer.c
 src/gnome/reconcile-list.c
 src/gnome-search/dialog-search.c
@@ -420,22 +321,17 @@ src/gnome-utils/gnc-tree-view.c
 src/gnome-utils/gnc-tree-view-commodity.c
 src/gnome-utils/gnc-tree-view-price.c
 src/gnome-utils/gnc-window.c
-src/gnome-utils/gw-gnome-utils.c
 src/gnome-utils/misc-gnome-utils.c
 src/gnome-utils/preferences.glade
 src/gnome-utils/print-session.c
 src/gnome-utils/QuickFill.c
 src/gnome-utils/search-param.c
-src/gnome-utils/test/test-gnc-dialog.c
-src/gnome-utils/test/test-gnc-recurrence.c
-src/gnome-utils/test/test-link-module.c
 src/gnome-utils/transfer.glade
 src/gnome/window-main-summarybar.c
 src/gnome/window-reconcile.c
 src/import-export/binary-import/binary-import.glade
 src/import-export/binary-import/druid-commodity.c
 src/import-export/binary-import/gncmod-binary-import.c
-src/import-export/binary-import/test/test-link-module.c
 src/import-export/csv/gnc-csv2glist.c
 src/import-export/generic-import.glade
 src/import-export/gnc-import-desc-format.c
@@ -460,7 +356,6 @@ src/import-export/hbci/gnc-hbci-utils.c
 src/import-export/hbci/gncmod-hbci.c
 src/import-export/hbci/gnc-plugin-hbci.c
 src/import-export/hbci/hbci-interaction.c
-src/import-export/hbci/test/test-link-module.c
 src/import-export/import-account-matcher.c
 src/import-export/import-backend.c
 src/import-export/import-commodity-matcher.c
@@ -481,34 +376,22 @@ src/import-export/mt940/gnc-plugin-mt940.c
 src/import-export/ofx/gncmod-ofx-import.c
 src/import-export/ofx/gnc-ofx-import.c
 src/import-export/ofx/gnc-plugin-ofx.c
-src/import-export/ofx/test/test-link.c
 src/import-export/qif-import/dialog-account-picker.c
 src/import-export/qif-import/druid-qif-import.c
-src/import-export/qif-import/gnc-druid-test.c
 src/import-export/qif-import/gncmod-qif-import.c
 src/import-export/qif-import/gnc-plugin-qif-import.c
 src/import-export/qif-import/qif.glade
-src/import-export/qif-import/test/test-link.c
 src/import-export/qif-io-core/gncmod-qifiocore.c
 src/import-export/qif/qif-context.c
 src/import-export/qif/qif-defaults.c
 src/import-export/qif/qif-file.c
 src/import-export/qif/qif-objects.c
 src/import-export/qif/qif-parse.c
-src/import-export/qif/test/test-link.c
-src/import-export/qif/test/test-qif.c
-src/import-export/test/test-import-parse.c
-src/import-export/test/test-link.c
 src/network-utils/gnc-gpg.c
 src/network-utils/gnc-http.c
 src/network-utils/gncmod-network-utils.c
-src/network-utils/test/test-link-module.c
-src/optional/swig/examples/scan-acct.pl
-src/optional/swig/examples/time-book-load.pl
-src/optional/swig/examples/time-query.pl
 src/optional/swig/gnucash-swig-defines.c
 src/optional/swig/helperfuncs.c
-src/quotes/Quote_example.pl
 src/register/ledger-core/dialog-dup-trans.c
 src/register/ledger-core/gnc-ledger-display.c
 src/register/ledger-core/gncmod-ledger-core.c
@@ -519,7 +402,6 @@ src/register/ledger-core/split-register-load.c
 src/register/ledger-core/split-register-model.c
 src/register/ledger-core/split-register-model-save.c
 src/register/ledger-core/split-register-util.c
-src/register/ledger-core/test/test-link-module.c
 src/register/register-core/basiccell.c
 src/register/register-core/cellblock.c
 src/register/register-core/cell-factory.c
@@ -527,7 +409,6 @@ src/register/register-core/checkboxcell.c
 src/register/register-core/formulacell.c
 src/register/register-core/gncmod-register-core.c
 src/register/register-core/gtable.c
-src/register/register-core/gw-register-core.c
 src/register/register-core/numcell.c
 src/register/register-core/pricecell.c
 src/register/register-core/quickfillcell.c
@@ -537,7 +418,6 @@ src/register/register-core/table-allgui.c
 src/register/register-core/table-control.c
 src/register/register-core/table-layout.c
 src/register/register-core/table-model.c
-src/register/register-core/test/test-link-module.c
 src/register/register-gnome/combocell-gnome.c
 src/register/register-gnome/datecell-gnome.c
 src/register/register-gnome/formulacell-gnome.c
@@ -555,28 +435,20 @@ src/register/register-gnome/gnucash-style.c
 src/register/register-gnome/pricecell-gnome.c
 src/register/register-gnome/quickfillcell-gnome.c
 src/register/register-gnome/table-gnome.c
-src/register/register-gnome/test/test-link-module.c
 src/report/locale-specific/us/gncmod-locale-reports-us.c
-src/report/locale-specific/us/test/test-link-module.c
 src/report/report-gnome/dialog-column-view.c
 src/report/report-gnome/dialog-style-sheet.c
 src/report/report-gnome/gncmod-report-gnome.c
 src/report/report-gnome/gnc-plugin-page-report.c
-src/report/report-gnome/gw-report-gnome.c
 src/report/report-gnome/report.glade
-src/report/report-gnome/test/test-link-module.c
 src/report/report-gnome/window-report.c
 src/report/report-system/gncmod-report-system.c
 src/report/report-system/gnc-report.c
-src/report/report-system/test/test-link-module.c
 src/report/standard-reports/gncmod-standard-reports.c
 src/report/stylesheets/gncmod-stylesheets.c
 src/report/stylesheets/gnc-plugin-stylesheets.c
 src/report/utility-reports/gncmod-utility-reports.c
 src/tax/us/gncmod-tax-us.c
-src/tax/us/test/test-link-module.c
-src/test-core/gncmod-test.c
-src/test-core/test-stuff.c
 lib/libqof/backend/file/qsf-backend.c
 intl-scm/guile-strings.c
 doc/tip_of_the_day.list.in
